--- a/nodejs/todolist/package.json
+++ b/nodejs/todolist/package.json
@@ -1,11 +1,31 @@
 {
   "name": "todolist",
   "version": "1.0.0",
+  "type": "module",
   "description": "training to nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint src",
+    "format": "prettier --write \"src/**/*.js\" \"test/**/*.js\""
   },
   "author": "Ababacar Niang",
-  "license": "ISC"
+  "license": "ISC",
+  "bin": {
+    "task-cli": "./src/main.js"
+  },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "globals": "^15.13.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1"
+  }
 }
